--- a/workouts_app/templates/workouts_app/oauth-check.html
+++ b/workouts_app/templates/workouts_app/oauth-check.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="jumbotron">
-    <h1>My fake blog!</h1>
+    <h1>google oauth</h1>
     {% if user.is_authenticated %}
       <p>Logged as {{ user.username }}</p>
       <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
