--- a/hoosworkinout/templates/hoosworkinout/add-exercise.html
+++ b/hoosworkinout/templates/hoosworkinout/add-exercise.html
@@ -2,9 +2,7 @@
 
 {% load static %}
 
-{% block pagename %}Home{% endblock %}
-
-{% block pagecontent %}
+{% block content %}
 
 <div>
 	<div class="container-fluid" style="background-color:#a020f0;">
