--- a/hoosworkinout/templates/hoosworkinout/base.html
+++ b/hoosworkinout/templates/hoosworkinout/base.html
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-   {% include "hoosworkinout/navbar.html" %}
+  </div>
+    {% include 'hoosworkinout/navbar.html' %}
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-8">
