--- a/hoosworkinout/templates/registration/login.html
+++ b/hoosworkinout/templates/registration/login.html
@@ -3,14 +3,12 @@
 
 {% block content %}
 <div class="jumbotron">
-  <h1 class="display-4">Welcome back!</h1>
-  <p class="lead">Edit your profile here</p>
+  <h1 class="display-4">Please Login</h1>
   <hr class="my-4">
   <form method="post">
     {% csrf_token %}
     {{ form | crispy }}
-    <button type="submit" class="btn btn-success">Save Profile</button>
+    <button type="submit" class="btn btn-success">Login</button>
   </form>
 </div>
-  
 {% endblock %}
