--- a/hoosworkinout/templates/hoosworkinout/navbar.html
+++ b/hoosworkinout/templates/hoosworkinout/navbar.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href='/'>Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
@@ -23,8 +23,8 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+      <li class="nav-item ">
+        <a class="nav-link" href='/edit-profile/'>Edit Profile</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
