--- a/hoosworkinout/templates/hoosworkinout/profile.html
+++ b/hoosworkinout/templates/hoosworkinout/profile.html
@@ -4,6 +4,15 @@
 
 {%for cur_user in current_user%}
 This is {{cur_user.username}}'s profile
+
 {%endfor%}
+
+
+<div class="jumbotron jumbotron-fluid" style="height: 1%; background-color:#f4f7f6; color: #e24e42;">
+	<div class="container">
+		<h1 class="display-5" style="font-family: 'Major Mono Display', monospace;">My Workouts</h1>
+		<hr class="my-4">
+	</div>
+</div>
 
 {% endblock %}
