Added URLs and Views back

--- a/hoosworkinout/templates/hoosworkinout/home.html
+++ b/hoosworkinout/templates/hoosworkinout/home.html
@@ -8,4 +8,10 @@
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </div>
+
+
+  {%for cur_user in current_user%}
+  This is {{cur_user.username}}'s profile
+
+  {%endfor%}
 {% endblock %}
