--- a/hoosworkinout/templates/hoosworkinout/home.html
+++ b/hoosworkinout/templates/hoosworkinout/home.html
@@ -10,8 +10,15 @@
   </div>
 
 
-  {%for cur_user in current_user%}
-  This is {{cur_user.username}}'s profile
+  <div class="jumbotron jumbotron-fluid" style="height: 1%; background-color:#f4f7f6; color: #e24e42;">
+    <div class="container">
+      <hr class="my-4">
+      <p class="lead">My Workouts</p>
+    </div>
+
+
+  {%for workout in current_workouts%}
+  {{workout.name}}
 
   {%endfor%}
 {% endblock %}
