--- a/hoosworkinout/templates/hoosworkinout/workout_form.html
+++ b/hoosworkinout/templates/hoosworkinout/workout_form.html
@@ -3,9 +3,9 @@
 
 {% block content %}
   <h3>Start New Workout</h3>
-  <form method="post" novalidate class="bootstrap4">
+  <form method="post">
     {% csrf_token %}
-    {{ form | crispy }}
-    <button type="submit" class="btn btn-success">Save New Workout</button>
+    {{ form | crispy}}
+    <input type="submit" class="btn btn-success">
   </form>
 {% endblock %}
