--- a/hoosworkinout/templates/hoosworkinout/navbar.html
+++ b/hoosworkinout/templates/hoosworkinout/navbar.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="{% url 'new-workout' %}">Add Workout</a>
       </li>
       <li class="nav-item ">
         <a class="nav-link" href="{% url 'profile' %}">Edit Profile</a>
