--- a/hoosworkinout/templates/hoosworkinout/user_form.html
+++ b/hoosworkinout/templates/hoosworkinout/user_form.html
@@ -9,7 +9,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form | crispy }}
-    <button type="submit" class="btn btn-success">Save Profile</button>
+    <input type="submit" class="btn btn-success">
   </form>
 </div>
   
