--- a/hoosworkinout/templates/hoosworkinout/workout_form.html
+++ b/hoosworkinout/templates/hoosworkinout/workout_form.html
@@ -2,10 +2,14 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h3>Start New Workout</h3>
-  <form method="post">
-    {% csrf_token %}
-    {{ form | crispy}}
-    <input type="submit" class="btn btn-success">
-  </form>
+<div class="card">
+  <h5 class="card-header">Start New Workout</h5>
+  <div class="card-body">
+    <form method="post">
+      {% csrf_token %}
+      {{ form | crispy}}
+      <button class="btn btn-primary" type="submit">Save</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
