--- a/hoosworkinout/templates/hoosworkinout/navbar.html
+++ b/hoosworkinout/templates/hoosworkinout/navbar.html
@@ -13,7 +13,8 @@
         <a class="nav-link" href="{% url 'new-workout' %}">Add Workout</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="{% url 'profile' %}">Edit Profile</a>
+        <a class="nav-link" href="/profile/{{user.profile.id}}">Edit Profile</a>
+
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
