--- a/hoosworkinout/templates/hoosworkinout/home.html
+++ b/hoosworkinout/templates/hoosworkinout/home.html
@@ -6,6 +6,8 @@
     <p class="lead">Let's get started!</p>
     <hr class="my-4">
     <a class="btn btn-primary btn-lg" href="{% url 'new-workout' %}" role="button">Start a new workout</a>
-    <a class="btn btn-primary btn-lg" href="{% url 'new-exercise' %}" role="button">Add an exercise</a>
-</div>  
+    <a class="btn btn-danger btn-lg" href="{% url 'new-cardio-exercise' %}" role="button">Add a cardio exercise</a>
+      <a class="btn btn-success btn-lg" href="{% url 'new-strength-exercise' %}" role="button">Add a strength exercise</a>
+        <a class="btn btn-info btn-lg" href="{% url 'new-hiit-exercise' %}" role="button">Add a HIIT exercise</a>
+</div>
 {% endblock %}
