--- a/hoosworkinout/templates/hoosworkinout/home.html
+++ b/hoosworkinout/templates/hoosworkinout/home.html
@@ -10,4 +10,19 @@
       <a class="btn btn-success btn-lg" href="{% url 'new-strength-exercise' %}" role="button">Add a strength exercise</a>
         <a class="btn btn-info btn-lg" href="{% url 'new-hiit-exercise' %}" role="button">Add a HIIT exercise</a>
 </div>
+
+
+<div class="jumbotron">
+
+<h3>My Recorded Workouts</h3>
+&nbsp;
+<ul>
+{% for workout in object_list %}
+    <li>{{ workout.name }}</li>
+    &nbsp;
+{% empty %}
+    <li>No workouts yet - - - What are you waiting for? Get started now!</li>
+{% endfor %}
+</ul>
 {% endblock %}
+</div>
