Added workout comments to ListView

--- a/hoosworkinout/templates/hoosworkinout/home.html
+++ b/hoosworkinout/templates/hoosworkinout/home.html
@@ -19,7 +19,8 @@
 <ul>
 {% for workout in object_list %}
     <li>{{ workout.name }}</li>
-    &nbsp;
+    <i>{{workout.comment}}</i><br><br>
+
 {% empty %}
     <li>No workouts yet - - - What are you waiting for? Get started now!</li>
 {% endfor %}
