--- a/hoosworkinout/templates/hoosworkinout/user_form.html
+++ b/hoosworkinout/templates/hoosworkinout/user_form.html
@@ -3,14 +3,17 @@
 
 {% block content %}
 <div class="jumbotron">
-  <h1 class="display-4">Welcome back!</h1>
-  <p class="lead">Edit your profile here</p>
-  <hr class="my-4">
-  <form method="post">
-    {% csrf_token %}
-    {{ form | crispy }}
-    <input type="submit" class="btn btn-success">
-  </form>
+  <h1 class="display-4">Edit your profile</h1>
 </div>
-  
+<div style="display: flex; justify-content: center;">
+  <div class="card w-50">
+    <div class="card-body">
+      <form method="post">
+        {% csrf_token %}
+        {{ form | crispy }}
+        <button class="btn btn-primary" type="submit">Save</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
