profile and home page edits

--- a/hoosworkinout/templates/hoosworkinout/base.html
+++ b/hoosworkinout/templates/hoosworkinout/base.html
@@ -8,7 +8,7 @@
   <title>Hoos Workin Out</title>
   </head>
   <body>
-    {% include 'hoosworkinout/navbar.html' %}
+    {% include 'hoosworkinout/_includes/navbar.html' %}
     {% block content %}
     {% endblock %}
   </body>
