--- a/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
+++ b/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HoosWorkinOut</a>
+  <a class="navbar-brand" href="{% url 'home' %}">HoosWorkinOut</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -12,12 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'new-workout' %}">Add Workout</a>
       </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="/profile/{{user.profile.id}}">Edit Profile</a>
-
-      </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
+      <a class="nav-link" href="{% url 'profile' %}">Profile</a>
       <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
     </div>
   </div>
