--- a/hoosworkinout/templates/hoosworkinout/profile.html
+++ b/hoosworkinout/templates/hoosworkinout/profile.html
@@ -15,9 +15,9 @@
 		  User Profile
 		</div>
 		<ul class="list-group list-group-flush">
-		  <li class="list-group-item">Cras justo odio</li>
-		  <li class="list-group-item">Dapibus ac facilisis in</li>
-		  <li class="list-group-item">Vestibulum at eros</li>
+		  <li class="list-group-item"><b>Birthday:</b> {{ user.profile.birthday }}</li>
+		  <li class="list-group-item"><b>Body Weight:</b> {{ user.profile.birthday }}</li>
+		  <li class="list-group-item"><b>Best Lift:</b> {{ user.profile.birthday }}</li>
 		</ul>
 	  </div>
   </div>
