--- a/hoosworkinout/templates/hoosworkinout/workout_list.html
+++ b/hoosworkinout/templates/hoosworkinout/workout_list.html
@@ -36,8 +36,8 @@
             {% endif %}
           {% endfor %}
           <li class="list-group-item">
-            <a class="btn btn-info" href="{% url 'new-strength-exercise' %}" role="button">View</a>
-            <a class="btn btn-danger" href="{% url 'delete-workout' workout.wid %}" role="button">Delete</a>
+            <button class="btn btn-primary" type="submit">Save</button>
+            <button class="btn btn-primary" type="submit">Save</button>
           </li>
       </ul>
   </div>
