--- a/hoosworkinout/templates/hoosworkinout/workout_confirm_delete.html
+++ b/hoosworkinout/templates/hoosworkinout/workout_confirm_delete.html
@@ -1,8 +1,18 @@
 {% extends 'hoosworkinout/base.html' %}
 
 {% block content %}
-<form method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ object }}"?</p>
-    <input type="submit" value="Confirm">
-</form>
+<div style="height: 100%; display: flex; align-items: center; justify-content: center;">
+    <div class="card">
+        <div class="card-header">
+            <b>Confirm Deletion</b>
+        </div>
+        <div class="card-body">
+            <p>Are you sure you want to delete workout <b>{{ object }}</b>?</p>
+            <form method="post">
+                {% csrf_token %}
+                <button class="btn btn-danger" type="submit">Delete</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
