--- a/hoosworkinout/templates/hoosworkinout/profile.html
+++ b/hoosworkinout/templates/hoosworkinout/profile.html
@@ -16,8 +16,8 @@
 		</div>
 		<ul class="list-group list-group-flush">
 		  <li class="list-group-item"><b>Birthday:</b> {{ user.profile.birthday }}</li>
-		  <li class="list-group-item"><b>Body Weight:</b> {{ user.profile.birthday }}</li>
-		  <li class="list-group-item"><b>Best Lift:</b> {{ user.profile.birthday }}</li>
+		  <li class="list-group-item"><b>Body Weight:</b> {{ user.profile.body_weight }}</li>
+		  <li class="list-group-item"><b>Best Lift:</b> {{ user.profile.best_lift }}</li>
 		</ul>
 	  </div>
   </div>
