--- a/hoosworkinout/templates/hoosworkinout/exercise_form.html
+++ b/hoosworkinout/templates/hoosworkinout/exercise_form.html
@@ -2,14 +2,18 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="card">
-  <h5 class="card-header">Log New Exercise &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Pssst - Create a workout first if you haven't already!)</h5>
-  <div class="card-body">
-    <form method="post">
-      {% csrf_token %}
-      {{ form | crispy}}
-      <button class="btn btn-primary" type="submit">Save</button>
-    </form>
+<div style="display: flex; padding-top: 4rem; align-items: center; justify-content: center;">
+  <div class="card w-50">
+    <div class="card-header">
+		  Add Exercise Info
+		</div>
+    <div class="card-body">
+      <form method="post">
+        {% csrf_token %}
+        {{ form | crispy }}
+        <button class="btn btn-primary" type="submit">Save</button>
+      </form>
+    </div>
   </div>
 </div>
 {% endblock %}
