--- a/hoosworkinout/templates/hoosworkinout/plan_form.html
+++ b/hoosworkinout/templates/hoosworkinout/plan_form.html
@@ -2,14 +2,16 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="card">
-  <h5 class="card-header">Create a New Workout Plan</h5>
-  <div class="card-body">
-    <form method="post">
-      {% csrf_token %}
-      {{ form | crispy}}
-      <button class="btn btn-primary" type="submit">Save</button>
-    </form>
+<div style="display: flex; justify-content: center;">
+  <div class="card">
+    <h5 class="card-header">Create a New Workout Plan</h5>
+    <div class="card-body">
+      <form method="post">
+        {% csrf_token %}
+        {{ form | crispy}}
+        <button class="btn btn-primary" type="submit">Save</button>
+      </form>
+    </div>
   </div>
 </div>
 {% endblock %}
