--- a/hoosworkinout/templates/hoosworkinout/hiit_form.html
+++ b/hoosworkinout/templates/hoosworkinout/hiit_form.html
@@ -2,8 +2,8 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div style="display: flex; justify-content: center;">
-  <div class="card">
+<div style="padding-top: 4rem; display: flex; justify-content: center;">
+  <div class="card w-75">
     <h5 class="card-header">Add info for your Hiit Exercise</h5>
     <div class="card-body">
       <form method="post">
