--- a/hoosworkinout/templates/hoosworkinout/cardio_form.html
+++ b/hoosworkinout/templates/hoosworkinout/cardio_form.html
@@ -2,10 +2,10 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div style="display: flex; justify-content: center;">
-  <div class="card w-50">
+<div style="padding-top: 4rem; display: flex; justify-content: center;">
+  <div class="card w-75">
     <div class="card-header">
-		  Cardio Info
+		  Add info for your Hiit Exercise
 		</div>
     <div class="card-body">
       <form method="post">
