--- a/hoosworkinout/templates/hoosworkinout/exercise_form.html
+++ b/hoosworkinout/templates/hoosworkinout/exercise_form.html
@@ -2,8 +2,8 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div style="display: flex; padding-top: 4rem; align-items: center; justify-content: center;">
-  <div class="card w-50">
+<div style="padding-top: 4rem; display: flex; justify-content: center;">
+  <div class="card w-75">
     <div class="card-header">
 		  Add Exercise Info
 		</div>
