--- a/hoosworkinout/templates/hoosworkinout/strength_form.html
+++ b/hoosworkinout/templates/hoosworkinout/strength_form.html
@@ -2,14 +2,16 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="card">
-  <h5 class="card-header">Add info for your Strength Exercise</h5>
-  <div class="card-body">
-    <form method="post">
-      {% csrf_token %}
-      {{ form | crispy}}
-      <button class="btn btn-primary" type="submit">Save</button>
-    </form>
+<div style="padding-top: 4rem; display: flex; justify-content: center;">
+  <div class="card w-75">
+    <h5 class="card-header">Add info for your Strength Exercise</h5>
+    <div class="card-body">
+      <form method="post">
+        {% csrf_token %}
+        {{ form | crispy}}
+        <button class="btn btn-primary" type="submit">Save</button>
+      </form>
+    </div>
   </div>
 </div>
 {% endblock %}
