added workout export

--- a/hoosworkinout/templates/hoosworkinout/home.html
+++ b/hoosworkinout/templates/hoosworkinout/home.html
@@ -16,7 +16,7 @@
   {% for workout in workouts %}
   <div class="card" style="width: 20rem; margin: auto;">
       <div class="card-header">
-        {{ workout.name }}
+        <b>Name: </b>{{ workout.name }}
       </div>
       <ul class="list-group list-group-flush">
           <li class="list-group-item">
