--- a/hoosworkinout/templates/hoosworkinout/profile.html
+++ b/hoosworkinout/templates/hoosworkinout/profile.html
@@ -6,11 +6,11 @@
 	<p class="lead">Here are your current stats</p>
 	<hr class="my-4">
 	<p class="lead">
-		<a class="btn btn-primary btn-lg" href="{% url 'edit-profile' %}" role="button">Edit Profile</a>
+		<a class="btn btn-primary btn-lg" href="{% url 'edit-profile' %}" role="button">Edit User Profile</a>
 	  </p>
   </div>
-  <div style="display: flex; justify-content: center;">
-	<div class="card w-50">
+  <div style="display: flex; justify-content: space-around;">
+	<div class="card" style="width: 30rem; margin: auto;">
 		<div class="card-header">
 		  User Profile
 		</div>
@@ -19,6 +19,15 @@
 		  <li class="list-group-item"><b>Body Weight:</b> {{ user.profile.body_weight }}</li>
 		  <li class="list-group-item"><b>Best Lift:</b> {{ user.profile.best_lift }}</li>
 		</ul>
-	  </div>
+	</div>
+	<div class="card" style="width: 30rem; margin: auto;">
+		<div class="card-header">
+		  Auth Information
+		</div>
+		<ul class="list-group list-group-flush">
+		  <li class="list-group-item"><b>Full Name:</b> {{ user.get_full_name }}</li>
+		  <li class="list-group-item"><b>Email:</b> {{ user.email }}</li>
+		</ul>
+	</div>
   </div>
 {% endblock %}
