--- a/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
+++ b/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
@@ -12,6 +12,18 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'new-workout' %}">Add Workout</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'new-plan' %}">Add Plan</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'new-cardio-exercise' %}">Add Workout</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'new-strength-exercise' %}">Add Workout</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'new-hiit-exercise' %}">Add Workout</a>
+      </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
       <a class="nav-link" href="{% url 'profile' %}">Profile</a>
