--- a/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
+++ b/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
@@ -16,13 +16,13 @@
         <a class="nav-link" href="{% url 'new-plan' %}">Add Plan</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'new-cardio-exercise' %}">Add Workout</a>
+        <a class="nav-link" href="{% url 'new-cardio-exercise' %}">Add Cardio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'new-strength-exercise' %}">Add Workout</a>
+        <a class="nav-link" href="{% url 'new-strength-exercise' %}">Add Strength</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'new-hiit-exercise' %}">Add Workout</a>
+        <a class="nav-link" href="{% url 'new-hiit-exercise' %}">Add HIIT</a>
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
