--- a/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
+++ b/hoosworkinout/templates/hoosworkinout/_includes/navbar.html
@@ -24,6 +24,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'new-hiit-exercise' %}">Add HIIT</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'new-location' %}">Add Location</a>
+      </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
       <a class="nav-link" href="{% url 'profile' %}">Profile</a>
